[tool.poetry]
name = "physionet"
version = "0.1.0"
description = "A collection of tools for working with the PhysioNet repository."
authors = [
  { name="Tom Pollard", email="tpollard@mit.edu" },
]
readme = "README.md"
repository = "https://github.com/MIT-LCP/physionet"
license = {file = "LICENSE"}

[tool.poetry.dependencies]
python = ">=3.7"
pytest = {version = ">=7.1.1", optional = true}
pytest-xdist = {version = ">=2.5.0", optional = true}
pylint = {version = ">=2.13.7", optional = true}
black = {version = ">=22.3.0", optional = true}
Sphinx = {version = ">=4.5.0", optional = true}

[tool.poetry.extras]
dev = ["pytest", "pytest-xdist", "pylint", "black", "Sphinx"]

# Do NOT use [tool.poetry.dev-dependencies]. See: https://github.com/python-poetry/poetry/issues/3514

[tool.black]
line-length = 80
target-version = ['py37']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
